package pl.edu.pwr.tplab.faktura.service.dto;

public record LineItemDTO(int itemId, int quantity, double price) { }
